fixed main.css file to align pet cards on DOM

--- a/main.css
+++ b/main.css
@@ -22,7 +22,7 @@ form {
   display: flex; 
   flex-wrap: wrap;
   flex-direction: row;
-  align-content: space-evenly;
+  align-items: flex-start;
   margin-left: 10px;
   margin-top: 10px;
   justify-content: center;
@@ -37,10 +37,16 @@ form {
   border: solid 1px blue;
   padding: 10px;
   width: 100%;
+  margin-bottom: 5px;
 
  }
  img.card-img-top{
   width: 10em;
   height: 10em;
+}
+
+.petcard-footer{
+  align-items: flex-end;
+  justify-items: flex-end;
 }
 }
